# REMLA-group10

./: .gitignore  Activity.md  README.md  dvc.yaml  pylintrc
.dvc/: config
data/: .gitignore  test.txt.dvc  train.txt.dvc  val.txt.dvc
data/model/: .gitignore
data/preprocess/: .gitignore
data/raw/: .gitignore
data/results/: .gitignore
documents/: A1Submission.md
notebooks/: Phishing Detection CNN.ipynb
phishing-detection/: .bandit  pylintrc  pyproject.toml
phishing-detection/phishing_detection/: get_data.py  model_definition.py  params.yaml  predict.py  preprocess.py  run.py  train.py  utils.py
